--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,210 @@
-absl-py==2.0.0
+absl-py==1.4.0
+accelerate==0.22.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+altair==5.1.1
+annotated-types==0.5.0
+antiorm==1.2.1
+anyio==4.0.0
 asgiref==3.7.2
+astor==0.8.1
 astunparse==1.6.3
-cachetools==5.3.2
+async-timeout==4.0.3
+attrdict==2.0.1
+attrs==23.1.0
+authentication==1.1.0
+authenticator==1.1.3
+awsebcli==3.20.10
+Babel==2.12.1
+bce-python-sdk==0.8.90
+bcrypt==4.0.1
+bitsandbytes==0.41.1
+blinker==1.6.2
+botocore==1.31.85
+cachetools==5.3.1
+cement==2.8.2
 certifi==2023.7.22
-charset-normalizer==3.3.2
-colorama==0.4.6
-Django==4.2.7
-django-cors-headers==4.3.0
-filelock==3.13.1
+cffi==1.16.0
+charset-normalizer==3.2.0
+click==8.1.7
+colorama==0.4.3
+contourpy==1.1.0
+cryptography==41.0.4
+cssselect==1.2.0
+cssutils==2.7.1
+ctransformers==0.2.27
+cycler==0.11.0
+Cython==3.0.2
+dataclasses-json==0.5.14
+datasets==2.14.5
+db==0.1.1
+db-sqlite3==0.0.1
+decorator==5.1.1
+dill==0.3.7
+distlib==0.3.8
+Django==4.2.6
+django-cors-headers==4.3.1
+django-crispy-forms==2.1
+et-xmlfile==1.1.0
+extra-streamlit-components==0.1.60
+faiss-cpu==1.7.4
+filelock==3.12.3
+Flask==2.3.3
+flask-babel==3.1.0
 flatbuffers==23.5.26
-fsspec==2023.10.0
-gast==0.5.4
-google-auth==2.23.4
+fonttools==4.42.1
+frozenlist==1.4.0
+fsspec==2023.6.0
+future==0.18.3
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.36
+google-auth==2.23.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
-grpcio==1.59.2
-h5py==3.10.0
-huggingface-hub==0.19.4
+gpt4all==1.0.10
+greenlet==2.0.2
+grpcio==1.58.0
+h11==0.14.0
+h5py==3.9.0
+httpcore==0.18.0
+httpx==0.25.0
+huggingface-hub==0.17.1
 idna==3.4
+imageio==2.31.3
+imgaug==0.4.0
+importlib-metadata==6.8.0
+iso8601==2.1.0
+itsdangerous==2.1.2
 Jinja2==3.1.2
-keras==2.14.0
+jmespath==1.0.1
+joblib==1.3.2
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+keras==2.13.1
+kiwisolver==1.4.5
+langchain==0.0.286
+langsmith==0.0.35
+lazy_loader==0.3
 libclang==16.0.6
-Markdown==3.5.1
+lmdb==1.4.1
+lxml==4.9.3
+Markdown==3.4.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-ml-dtypes==0.2.0
+marshmallow==3.20.1
+matplotlib==3.8.0
+mdurl==0.1.2
 mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.1
+multidict==6.0.4
+multiprocess==0.70.15
+mypy-extensions==1.0.0
+mysqlclient==2.2.0
+networkx==3.1
+nltk==3.8.1
+numexpr==2.8.6
+numpy==1.25.2
 oauthlib==3.2.2
+opencv-contrib-python==4.8.0.76
+opencv-python==4.8.0.76
+openpyxl==3.1.2
 opt-einsum==3.3.0
-packaging==23.2
-Pillow==10.1.0
-protobuf==4.25.0
+packaging==23.1
+paddle-bfloat==0.1.7
+paddleocr==2.6.0.1
+paddlepaddle==2.5.1
+pandas==2.1.0
+passlib==1.7.4
+pathspec==0.10.1
+Pillow==9.5.0
+platformdirs==4.1.0
+premailer==3.10.0
+protobuf==3.20.0
+psutil==5.9.5
+py-cpuinfo==9.0.0
+pyarrow==13.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pyclipper==1.3.0.post5
+pycparser==2.21
+pycryptodome==3.18.0
+pydantic==2.3.0
+pydantic_core==2.6.3
+pydeck==0.8.0
+Pygments==2.16.1
+PyJWT==2.8.0
+Pympler==1.0.1
+PyMuPDF==1.21.1
+pyparsing==3.1.1
+pypdf==3.16.0
+pypiwin32==223
+pytesseract==0.3.10
+python-dateutil==2.8.2
+pytz==2023.3.post1
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
+pywin32==306
 PyYAML==6.0.1
-regex==2023.10.3
+rapidfuzz==3.2.0
+rarfile==4.0
+redis==5.0.1
+referencing==0.30.2
+regex==2023.8.8
 requests==2.31.0
 requests-oauthlib==1.3.1
+rich==13.5.2
+rpds-py==0.10.2
 rsa==4.9
-safetensors==0.4.0
+safetensors==0.3.3
+scikit-image==0.21.0
+scikit-learn==1.3.0
+scipy==1.11.2
+seaborn==0.12.2
+semantic-version==2.8.5
+sentence-transformers==2.2.2
 sentencepiece==0.1.99
+shapely==2.0.1
 six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+SQLAlchemy==2.0.20
 sqlparse==0.4.4
+streamlit==1.26.0
+streamlit-authenticator==0.2.3
+streamlit-chat==0.1.1
 sympy==1.12
-tensorboard==2.14.1
-tensorboard-data-server==0.7.2
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-intel==2.14.0
+tenacity==8.2.3
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.0
 tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-tokenizers==0.15.0
-torch==2.1.1
+termcolor==1.1.0
+thop==0.1.1.post2209072238
+threadpoolctl==3.2.0
+tifffile==2023.8.30
+tokenizers==0.13.3
+toml==0.10.2
+toolz==0.12.0
+torch==2.0.1
+torchvision==0.15.2
+tornado==6.3.3
 tqdm==4.66.1
-transformers==4.35.2
-typing_extensions==4.8.0
+transformers @ git+https://github.com/huggingface/transformers.git@0a55d9f7376f72ad3ff296d4249840021b03bcc4
+typing-inspect==0.9.0
+typing_extensions==4.7.1
 tzdata==2023.3
-urllib3==2.0.7
-Werkzeug==3.0.1
-wrapt==1.14.1
+tzlocal==4.3.1
+ultralytics==8.0.180
+urllib3==1.26.16
+validators==0.22.0
+virtualenv==20.25.0
+visualdl==2.5.3
+watchdog==3.0.0
+wcwidth==0.1.9
+Werkzeug==2.3.7
+wrapt==1.15.0
+WTForms==3.0.1
+xxhash==3.3.0
+yarl==1.9.2
+zipp==3.16.2
