--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ astunparse==1.6.3
 async-timeout==4.0.3
 attrdict==2.0.1
 attrs==23.1.0
-authentication==1.1.0
+authentication==1.1.0   
 authenticator==1.1.3
 awsebcli==3.20.10
 Babel==2.12.1
@@ -190,7 +190,7 @@ torch==2.0.1
 torchvision==0.15.2
 tornado==6.3.3
 tqdm==4.66.1
-transformers @ git+https://github.com/Ashi63/Invoice_Processing_Django_App
+transformers @ git+https://github.com/huggingface/transformers.git@0a55d9f7376f72ad3ff296d4249840021b03bcc4
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
