--- a/appspec.yml
+++ b/appspec.yml
@@ -16,9 +16,9 @@ hooks:
       - location: scripts/instance_os_dependencies.sh
         timeout: 300
         runas: ubuntu
-      - location: scripts/python_dependencies.sh
-        timeout: 300
-        runas: ubuntu
+      - #location: scripts/python_dependencies.sh
+        #timeout: 300
+        #runas: ubuntu
       - location: scripts/gunicorn.sh
         timeout: 300
         runas: ubuntu
