--- a/gunicorn/gunicorn.service
+++ b/gunicorn/gunicorn.service
@@ -7,10 +7,10 @@ After=network.target
 User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/pythonprojeckdjango
-ExecStart=/home/ubuntu/env/bin/gunicorn \
+ExecStart=/home/ubuntu/pythonprojeckdjango/venv/bin/gunicorn \
           --access-logfile - \
           --workers 3 \
-          --bind unix:/home/ubuntu/pythonprojeckdjango/aip_web_project/aip_web_project.sock \
+          --bind unix:/run/gunicorn.sock \
           aip_web_project.wsgi:application
 [Install]
 WantedBy=multi-user.target
